# cloudflow

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
src/cloudflow/: __init__.py  api.py  checkpoint.py  cli.py  compact.py  data_info.py  io.py  model.py  normalization.py  sampling.py
src/cloudflow/conditioning/: __init__.py  core.py  era5.py  modis.py
src/cloudflow/stats/: era5_stats.json  modis_band_stats.json
